--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{
-  "name": "developer-blog-starter-code",
+{"homepage": "https://blog.conquerorthecrown.com/",
+  "name": "conquerorthecrown",
   "version": "0.1.0",
   "private": true,
   "scripts": {
