--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {"homepage": "https://blog.conquerorthecrown.com/",
   "name": "conquerorthecrown",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
