--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,13 @@
 # example netlify.toml
+#git status
+#git add . 
+#git commit -m "commit"
+#git push
+
 [build]
   command = "npm run build"
   functions = "netlify/functions"
-  publish = ".next"
+  publish = "out"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
